# OMNIS

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/collectors/: cloudtrail_events.json  config_snapshots.json
data/sample/: evidence_artifacts.csv  policy_documents.txt
data/synthetic/: DATA_CARD.md  evidence_artifacts.csv  policy_documents.txt  valid_requirement_ids.txt
docs/: COLLECTORS.md  EDGE_CASES.md  PERFORMANCE.md
docs/brief/: ORGANIZER_README.md  PROBLEM_STATEMENT_03.md
docs/detailed/: OMNIS_Documentation.tex
docs/presentation/: OMNIS_Presentation.pptx
notebooks/: omnis_analysis.ipynb
omnis/: __init__.py  __main__.py  cli.py  llm.py  models.py
omnis/collectors/: __init__.py  base.py  cloudtrail.py  config_snapshot.py
omnis/dashboard/: __init__.py  payload.py  server.py
omnis/dashboard/static/: index.html
omnis/detect/: __init__.py  rules.py
omnis/evaluation/: __init__.py  baseline.py  harness.py
omnis/freshness/: __init__.py  model.py
omnis/ingest/: __init__.py  parser.py
omnis/integrity/: __init__.py  checks.py
omnis/mapping/: __init__.py  linker.py
omnis/narrative/: __init__.py  templates.py
omnis/report/: __init__.py  builder.py
omnis/scoring/: __init__.py  scorer.py
omnis/synthesis/: __init__.py  generator.py
scripts/: label_signal_analysis.py
tests/: test_cli.py  test_collectors.py  test_dashboard.py  test_detect.py  test_evaluation.py  test_freshness.py  test_integrity.py  test_llm.py  test_mapping.py  test_narrative.py  test_parser.py  test_report.py  test_scoring.py  test_synthesis.py
(+1 files in other folders)
