[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omnis"
version = "0.1.0"
description = "OMNIS: a compliance evidence engine (the partly omniscient auditor)"
requires-python = ">=3.10"
dependencies = [
    "pandas==2.3.3",
    "pydantic==2.13.4",
]

[project.optional-dependencies]
dev = ["pytest==8.4.2"]

[tool.setuptools]
packages = ["omnis", "omnis.ingest", "omnis.integrity", "omnis.evaluation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
