[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omnis"
version = "0.1.0"
description = "OMNIS: a compliance evidence engine (the partly omniscient auditor)"
requires-python = ">=3.10"
dependencies = [
    "pandas==2.3.3",
    "pydantic==2.13.4",
    "numpy==2.4.3",
    "fpdf2==2.8.7",
]

[project.optional-dependencies]
dev = ["pytest==8.4.2"]

[tool.setuptools]
packages = [
    "omnis",
    "omnis.ingest",
    "omnis.integrity",
    "omnis.evaluation",
    "omnis.freshness",
    "omnis.detect",
    "omnis.synthesis",
    "omnis.mapping",
    "omnis.scoring",
    "omnis.narrative",
    "omnis.report",
    "omnis.dashboard",
    "omnis.collectors",
]

[tool.setuptools.package-data]
"omnis.dashboard" = ["static/*.html"]
"omnis.report" = ["fonts/*.otf", "fonts/LICENSE-LatinModern.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
